# retl

./: .gitignore  README.md  pyproject.toml  requirements.txt
retl/: main.py  nextcloud.py  settings.py
