[project]
name = "reiners-etl"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "platformdirs>=2.4.0",
    "pyyaml>=6.0.2",
    "rclone-python>=0.1.21",
    "rich>=13.7.0",
]

[project.scripts]
reiners-etl = "retl.main:main"
